Tue Mar  6 12:13:01 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* coreaudio.gemspec: Version bump to 0.0.9.

Fri Feb 24 01:06:20 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.8
	  0.0.7 has invalid dependency.

Fri Feb 24 00:47:07 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.7

	* ext/coreaudio.m (ca_out_buffer_data_append): fix last 1 frame
	  is overwritten by next buffer's first frame. fixes issue #7.
	  reported by dturnbull. Thank you!

Fri Feb 23 23:24:00 2012  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* Gemfile: use 'gemspec'
	* Gemfile.lock: delete from reository
	* .gitignore: add Gemfile.lock for ignore list
	* coreaudio.gemspec: udpate dependent version of jeweler

Fri Nov 25 01:03:49 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* examples/fft_shift_pitch.rb: ignore first element of fft result.

Tue Nov 22 00:09:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/audiofile.m(ca_audio_file_initialize): convert first argument
	  to String if necessary.

Sat Nov 12 18:23:10 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.6
	* change usage of rb_scan_args() in AudioFile.new. support ruby 1.9.2.

Tue Nov 1 22:01:39 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.5
	* fix an error in get name of audio device on some environment.
	  (use CFStringGetCString() instead of CFStringGetCStringPtr())

Sat Oct 29 00:55:11 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.4
	* use NArray for audio data.
	* rename AudioFile.new option keyword(:channel -> :channels)
	* add some examples.

Mon Oct 17 01:19:36 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.2
	* add CoreAudio::AudioFile, ability to read/write audio file.

Mon Oct 10 23:01:23 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.2
	* fix build error with 1.9.2

Sat Oct 8 02:52:38 2011 CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* release 0.0.1